# Shepherd

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: create-publish-release.yml  dev-cargo-test.yml
src/: cluster.rs  config.rs  diff.rs  errors.rs  file.rs  git.rs  lib.rs  logging.rs  main.rs  models.rs  modify.rs  project.rs  prtb.rs  rt.rs  traits.rs  update.rs
src/api/: client.rs  config.rs  errors.rs
src/error/: mod.rs
src/resources/: cluster.rs  project.rs  prtb.rs  rt.rs
src/utils/: config_validator.rs  diff.rs  file.rs  git.rs
