[package]
name = "rancher-cac"
version = "0.1.0"
edition = "2021"

[dependencies]
async-backtrace = "0.2.7"
chrono = { version = "0.4.41", features = ["serde"] }
git2 = "0.20.1"
json-patch = "4.0.0"
rancher_client = "1.0.5"
reqwest = "0.12.15"
reqwest-middleware = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-diff = "0.4"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
similar = "2.7.0"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.21"
